--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,11 +2,26 @@
   background-color: #343748;
 }
 .footer {
-  position: fixed;
   left: 0;
   bottom: 0;
   width: 100%;
   text-align: center;
   background-color: #f7f5f6;
   padding: 20px;
+}
+.img {
+  margin-top: 20px;
+  height: 250px;
+  width: 100%;
+}
+.img2 {
+  width: 100%;
+  height: 29%;
+  margin-left: -15%;
+}
+.cat {
+  background-color: #ece7e7;
+  max-height: 100%;
+  padding: 0px;
+  margin: 0;
 }
