--- a/client/src/App.css
+++ b/client/src/App.css
@@ -6,13 +6,14 @@
   bottom: 0;
   width: 100%;
   text-align: center;
-  background-color: #f7f5f6;
+  background-color: #eee9e9;
   padding: 20px;
 }
 .img {
   margin-top: 20px;
-  height: 250px;
-  width: 100%;
+  height: 220px;
+  width: 102%;
+  margin-right: 20px;
 }
 .img2 {
   width: 100%;
@@ -20,8 +21,13 @@
   margin-left: -15%;
 }
 .cat {
-  background-color: #ece7e7;
+  background-color: #eee9e9;
   max-height: 100%;
   padding: 0px;
   margin: 0;
+}
+.contactForm {
+  margin: 10px;
+  background-color: #605ca8;
+  border-radius: 20px;
 }
