--- a/client/src/component/auth/auth.css
+++ b/client/src/component/auth/auth.css
@@ -1,5 +1,9 @@
+.bg {
+  background-color: #343748;
+}
 .modal-bg {
-  background-color: #605ca8 !important;
+  background-color: #343748 !important;
+  border: 1px solid white;
   padding: 50px !important;
 }
 .input-login {
@@ -7,6 +11,14 @@
   color: white !important;
   border: 1px solid white !important;
   margin: 10px !important;
+}
+
+.input-register {
+  padding: 20px !important;
+  margin: 20px !important;
+  background-color: transparent !important;
+  color: white !important;
+  border-radius: 50px !important;
 }
 .flex1 {
   display: flex !important;
@@ -18,6 +30,7 @@
 h3 {
   color: white;
 }
+
 .button-modal {
   border: 0 !important;
   border-radius: 20px !important;
@@ -25,4 +38,79 @@ h3 {
   color: black !important;
   margin: 20px !important;
   padding: 7px 30px !important;
+}
+.bm-burger-button {
+  position: fixed;
+  width: 36px;
+  height: 30px;
+  right: 36px;
+  top: 45px;
+}
+
+/* Color/shape of burger icon bars */
+.bm-burger-bars {
+  background: #373a47;
+}
+
+/* Color/shape of burger icon bars on hover*/
+.bm-burger-bars-hover {
+  background: #a90000;
+}
+
+/* Position and sizing of clickable cross button */
+.bm-cross-button {
+  height: 24px;
+  width: 24px;
+}
+
+/* Color/shape of close button cross */
+.bm-cross {
+  background: #bdc3c7;
+}
+
+/*
+Sidebar wrapper styles
+Note: Beware of modifying this element as it can break the animations - you should not need to touch it in most cases
+*/
+.bm-menu-wrap {
+  position: fixed;
+  height: 100% !important;
+}
+
+/* General sidebar styles */
+.bm-menu {
+  background: #373a47;
+  padding: 2.5em 1.5em 0;
+  font-size: 1.15em;
+}
+
+/* Morph shape necessary with bubble or elastic */
+.bm-morph-shape {
+  fill: #373a47;
+}
+
+/* Wrapper for item list */
+.bm-item-list {
+  color: #b8b7ad;
+  padding: 0.8em;
+}
+
+/* Individual item */
+.bm-item {
+  display: inline-block;
+}
+
+/* Styling of overlay */
+.bm-overlay {
+  background: rgba(0, 0, 0, 0.3);
+}
+.sss {
+  position: absolute;
+  width: 200px;
+  height: 200%;
+  background-color: #a90000;
+}
+.dd {
+  border-radius: 30px;
+  padding: 40px;
 }
