--- a/client/src/component/auth/auth.css
+++ b/client/src/component/auth/auth.css
@@ -114,3 +114,9 @@ Note: Beware of modifying this element as it can break the animations - you shou
   border-radius: 30px;
   padding: 40px;
 }
+.statusAlert {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+}
