add status 3 after sms verfication

--- a/client/src/component/admin/Admin.css
+++ b/client/src/component/admin/Admin.css
@@ -7,6 +7,12 @@
   padding: 8px;
   border: 0;
 }
-.productImage-admin{
-  width:100%;
+.productImage-admin {
+  width: 100%;
+}
+.editImage {
+  width: 80px;
+  margin: 0;
+}
+.uploadImageButton{
 }
