--- a/client/src/component/user/shopping/Shopping.css
+++ b/client/src/component/user/shopping/Shopping.css
@@ -61,3 +61,75 @@
   height: 150px;
   width: 100%;
 }
+.CardCart {
+  background-color: #f5e7e7;
+}
+
+.totalPriceLabel {
+  position: absolute;
+  bottom: 0px;
+  left: 0px;
+  background-color: #000000ba;
+  border: 1px solid;
+  padding: 20px;
+  width: 100%;
+  text-align: center;
+}
+.orderButton {
+  color: #fff;
+  background-color: #6c757d;
+  border-color: #6c757d;
+  position: absolute;
+  bottom: 10%;
+  right: 0;
+  width: 100%;
+}
+.ClearButton {
+  color: #fff;
+  background-color: #6c757d;
+  border-color: #6c757d;
+  position: absolute;
+  bottom: 16%;
+  right: 0;
+  width: 100%;
+}
+.CartItems {
+  width: 100% !important;
+  max-height: 68%;
+  overflow-y: scroll;
+}
+/* width */
+::-webkit-scrollbar {
+  width: 20px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey;
+  border-radius: 10px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: transparent;
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: grey;
+}
+.cardBg {
+  background-color: transparent !important;
+}
+.flex1 {
+  display: flex !important;
+  flex-direction: row;
+}
+.to-center {
+  justify-content: center !important;
+}
+
+.X {
+  justify-content: flex-end !important;
+}
