--- a/client/src/component/user/shopping/Shopping.css
+++ b/client/src/component/user/shopping/Shopping.css
@@ -11,7 +11,7 @@
 }
 .poductDetailsIMG {
   width: 100%;
-  height: 80%;
+  height: 400px;
   border-radius: 20px;
 }
 .DetailsButton {
@@ -132,4 +132,14 @@
 
 .X {
   justify-content: flex-end !important;
+}
+.moreProduct-Image {
+  width: 250px;
+  justify-content: center;
+}
+.moreProductContainer {
+  justify-content: space-around;
+}
+.moreProduct-Image:hover {
+  opacity: 0.5;
 }
