--- a/client/src/component/user/shopping/Shopping.css
+++ b/client/src/component/user/shopping/Shopping.css
@@ -150,3 +150,19 @@
 .moreProduct-Image:hover {
   opacity: 0.5;
 }
+.MediaImage {
+  width: 90px;
+}
+.ReviewDate {
+  font-family: "Times New Roman", Times, serif;
+  color: grey;
+}
+.to-right {
+  float: right;
+}
+.imgRate {
+  margin-top: 20px;
+  margin-right: 20px;
+  width: 150px;
+  height: 40px;
+}
