--- a/client/src/component/user/home/home.css
+++ b/client/src/component/user/home/home.css
@@ -30,7 +30,7 @@
   justify-content: center;
 }
 .inputContact {
-  background-color: #605ca8;
+  background-color: #343748;
   border: 1px solid gray;
 }
 textarea {
